Added license, small doc improvements

--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces/tornadofaces.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces/tornadofaces.css
@@ -5,3 +5,11 @@
 span.highlight {
     background-color: yellow;
 }
+
+.switch {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
