Added Message component, Script component, improved filterFor with onload init

--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces/tornadofaces.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces/tornadofaces.css
@@ -9,3 +9,14 @@ span.highlight {
     -ms-user-select: none;
     user-select: none;
 }
+
+.messages {
+    position: relative;
+}
+
+.messages .close-button {
+    top: 3px;
+    color: #fff;
+    
+    
+}
