CSS fixes, made commandLink preventDoubleSubmission false by default and not button by default

--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces/tornadofaces.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces/tornadofaces.css
@@ -15,8 +15,12 @@ span.highlight {
 }
 
 .messages .close-button {
-    top: 3px;
+    top: 6px;
+    right: 8px;
     color: #fff;
-    
-    
+}
+
+.messages .label {
+    margin: 0;
+    padding: 10px;
 }
