--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
@@ -6233,8 +6233,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   color: #fff;
   font-weight: bold;
   background: #3fa2d8;
-  box-shadow: inset 0 1px 3px #2688be;
-  border-radius: 3px; }
+  box-shadow: inset 0 1px 3px #2688be; }
 
 .is-disabled .pika-button {
   pointer-events: none;
@@ -6244,9 +6243,8 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .pika-button:hover {
   color: #fff !important;
-  background: #F08A24 !important;
-  box-shadow: none !important;
-  border-radius: 3px !important; }
+  background: #cbcbcb !important;
+  box-shadow: none !important; }
 
 /* styling for abbr */
 .pika-table abbr {
@@ -6255,6 +6253,9 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 span.highlight {
   background-color: yellow; }
+
+form label {
+  font-weight: bold; }
 
 .switch {
   -webkit-touch-callout: none;
