--- a/tornadofaces/src/themes/tornado/scss/pickaday.scss
+++ b/tornadofaces/src/themes/tornado/scss/pickaday.scss
@@ -178,7 +178,6 @@ http://nicolasgallagher.com/micro-clearfix-hack/
   font-weight: bold;
   background: $primary-color;
   box-shadow: inset 0 1px 3px darken($primary-color, 10%);
-  border-radius: 3px;
 }
 
 .is-disabled .pika-button {
@@ -190,9 +189,8 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .pika-button:hover {
   color: #fff !important;
-  background: $warning-color !important;
+  background: $gray-dark !important;
   box-shadow: none !important;
-  border-radius: 3px !important;
 }
 
 /* styling for abbr */
