--- a/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
+++ b/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
@@ -2,6 +2,10 @@ span.highlight {
   background-color: yellow;
 }
 
+form label {
+  font-weight: bold;
+}
+
 .switch {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
