Updated markup for the improved Foundation notification, added title attribute to li, moved ladda to separate stylsheet ,doc changes.

--- a/tornadofaces/src/themes/tornado/scss/theme.scss
+++ b/tornadofaces/src/themes/tornado/scss/theme.scss
@@ -30,6 +30,7 @@ $foundation-version: "1.0.3";
 "components/accordion",
 "components/typography",
 "components/utilities",
+"ladda",
 "nouislider",
 "pickaday",
 "tornadofaces";
