--- a/tornadofaces/src/themes/tornado/scss/_settings.scss
+++ b/tornadofaces/src/themes/tornado/scss/_settings.scss
@@ -243,9 +243,9 @@ $primary-color: #3fa2d8;
 
 // $accordion-border: 1px solid $gray-dark;
 
-// $accordion-title-background: $gray-light;
+$accordion-title-background: $primary-color;
 // $accordion-title-background-hover: smartscale($accordion-title-background, 5%);
-// $accordion-title-background-active: smartscale($accordion-title-background, 3%);
+$accordion-title-background-active: smartscale($accordion-title-background, 20%);
 // $accordion-title-color: isitlight($accordion-title-background);
 // $accordion-title-color-active: isitlight($accordion-title-background);
 
