Added correct source map for stylesheet

--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
@@ -6603,4 +6603,4 @@ form label {
 
 
 
-/*# sourceMappingURL=theme.css.map?ln=tornadofaces */
+/*# sourceMappingURL=theme.css.map.xhtml?ln=tornadofaces-tornado */
