--- a/tornadofaces/src/themes/tornado/scss/icons.scss
+++ b/tornadofaces/src/themes/tornado/scss/icons.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src: unquote(url("#{resource['icomoon.eot']}"));
-  src:url("{resource['icomoon.eot?#iefixtwv9ni']}") format("embedded-opentype"),
-  url("{resource['icomoon.woff?twv9ni']}") format("woff"),
-  url("{resource['icomoon.ttf?twv9ni']}") format("truetype"),
-  url("{resource['icomoon.svg?twv9ni#icomoon']}") format('svg');
+  src: url("icomoon.eot.xhtml?ln=tornadofaces-tornado");
+  src: url("icomoon.eot.xhtml?ln-tornadofaces-tornado&#iefixtwv9ni'") format("embedded-opentype"),
+  url("icomoon.woff.xhtml?ln=tornadofaces-tornado") format("woff"),
+  url("icomoon.ttf.xhtml?ln=tornadofaces-tornado") format("truetype"),
+  url("icomoon.svg.xhtml?ln=tornadofaces-tornado") format('svg');
   font-weight: normal;
   font-style: normal;
 }
