--- a/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
+++ b/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
@@ -6,6 +6,118 @@
   padding: 1rem 2rem;
 }
 
+.icon-navigation {
+  color: #fff;
+  font-size: 1.6rem;
+  margin-left: 1rem;
+}
+.menu-group-left {
+  align-items: center;
+  flex-direction: row;
+}
+.close-button {
+  z-index: 9;
+}
+
+.accordion {
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.08);
+  border: 1px solid #CBCBCB;
+
+  &.item-spacing {
+    box-shadow: none;
+    border: none;
+
+    .accordion-item {
+      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.08);
+      border: 1px solid #CBCBCB;
+      margin-bottom: 0.4rem;
+    }
+  }
+
+  .accordion-item {
+    .accordion-title {
+      position: relative;
+      border-bottom: 1px solid #F4F4F1;
+      padding: 1.4rem 2.4rem 1.4rem 1rem;
+      display: flex;
+      align-items: center;
+      user-select: none;
+
+      i {
+        font-size: 2rem;
+        margin-right: 1rem;
+        color: $primary-color;
+      }
+
+      &:after {
+        content: "\e62e";
+        font-family: icomoon;
+        color: $primary-color;
+        position: absolute; top: 50%; right: 8px;
+        display: block;
+        width: 32px;
+        height: 32px;
+        line-height: 32px;
+        text-align: center;
+        font-size: 2rem;
+        border-radius: 50%;
+        transition: all 0.3s;
+        margin-top: -16px;
+      }
+
+      &:hover {
+        &:after {
+          background-color: $primary-color;
+          color: #fff;
+        }
+      }
+    }
+    .accordion-content {
+    }
+    &.is-active {
+      .accordion-title {
+        &:after {
+          transform: rotate(180deg);
+          //content: "\e62d";
+        }
+      }
+    }
+
+  }
+
+}
+
+@include breakpoint(small) {
+  #main-container { padding: 1rem !important; }
+
+  .menu-group > .menu-group-left {
+    flex: 1;
+    /* vebbe */
+  }
+  .menu-group > .menu-group-right {
+    display: block;
+    flex: inherit;
+  }
+}
+
+#quick-links {
+  li:nth-child(2) {
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+  }
+
+  a {
+    display: flex;
+    flex-direction: row;
+
+  }
+  i {
+    font-size: 1.4rem;
+  }
+  span {
+    margin-left: 0.8rem;
+  }
+}
+
 span.highlight {
   background-color: orange;
 }
