Prepared POM for central deployment

--- a/tornadofaces/src/themes/tornado/scss/_settings.scss
+++ b/tornadofaces/src/themes/tornado/scss/_settings.scss
@@ -98,7 +98,7 @@ $include-css: (
 // $body-antialiased: true;
 
 // Application Colors
-$primary-color: #3fa2d8;
+$primary-color: orange;
 // $secondary-color: #f1f1f1;
 // $alert-color: #F04124;
 // $info-color: #A0D3E8;
