--- a/tornadofaces/src/themes/tornado/scss/_global.scss
+++ b/tornadofaces/src/themes/tornado/scss/_global.scss
@@ -47,7 +47,7 @@ $alert-color: #F04124 !default;
 $info-color: #A0D3E8 !default;
 $success-color: #43AC6A !default;
 $warning-color: #F08A24 !default;
-$dark-color: #353e3e !default;
+$dark-color: #f00 !default;
 $gray: #dfdfdf !default;
 $gray-dark: darken($gray, 8) !default;
 $gray-light: lighten($gray, 8) !default;
