--- a/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
+++ b/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
@@ -1,3 +1,18 @@
+.boxed {
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.08);
+  border: 1px solid $gray;
+}
+
+// ?. Box
+// - - - - - - - - - - - - - - -
+.box {
+  @extend .boxed;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
 #left-menu-container {
   min-width: 220px;
   max-width: 300px;
@@ -19,11 +34,47 @@
   z-index: 9;
 }
 
-.boxed {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.08);
-  border: 1px solid #cbcbcb;
+// 6. Accordion
+// - - - - - - - - - - - - - - -
+.accordion-item {
+  background: $accordion-item-background;
 }
 
+// ?. Flippanel
+// - - - - - - - - - - - - - - -
+.flip-panel {
+  perspective: 1000;
+  flex: 1;
+
+  .flip-wrapper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+  }
+
+  &.flipped .flip-wrapper {
+    transform: rotateY(180deg);
+  }
+
+  .front, .back {
+    backface-visibility: hidden;
+    width: 100%;
+  }
+  .front {
+    transform: rotateY(0deg);
+    z-index: 2;
+  }
+  .back {
+    position: absolute; top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(-180deg);
+    transition: all 350ms cubic-bezier(0.485, 0.125, 0.830, 0.950);
+  }
+}
+
+// ?. Breadcrumb
+// - - - - - - - - - - - - - - -
 .breadcrumb {
   list-style: none;
   display: flex;
