Fixed duplicate class attribute for modal

--- a/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
+++ b/tornadofaces/src/main/resources/META-INF/resources/tornadofaces-tornado/theme.css
@@ -7186,6 +7186,9 @@ form label {
   display: block;
   margin-bottom: 1rem; }
 
+.noUi-target {
+  margin-top: 1.2rem; }
+
 @-webkit-keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
