--- a/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
+++ b/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
@@ -255,6 +255,10 @@ form label {
   margin-bottom: 1rem;
 }
 
+.noUi-target {
+  margin-top: 1.2rem;
+}
+
 @-webkit-keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
